--- a/articulo.tex
+++ b/articulo.tex
@@ -20,21 +20,21 @@
 \newtheorem{proposition}{Proposición}
 \newtheorem{remark}{Observación}
 \newtheorem{example}{Ejemplo}
+
 \begin{document}
 
 \maketitle
 
 \begin{abstract}
-Este artículo presenta una exposición exhaustiva del algoritmo Wagner-Whitin para la solución óptima del problema de dimensiona\-miento de lotes con demanda dinámica y determinística. 
-Partiendo del artículo fundacional de Wagner y Whitin (1958), se desarrolla el marco teórico del modelo, se demuestran los teoremas fundamentales que sustentan el algoritmo, se describe el procedimiento computacional y se ilustra con ejemplos numéricos. 
-El análisis revela la conexión entre la programa\-ción dinámica y la gestión de inventarios, destacando el concepto de horizonte de planificación como herramienta para reducir la complejidad computacional. Se incluyen definiciones formales de los conceptos clave y se discuten extensiones modernas del modelo.
+Este artículo presenta una exposición exhaustiva del algoritmo Wagner-Whitin para la solución óptima del problema de dimensionamiento de lotes con demanda dinámica y determinística. Partiendo del artículo fundacional de Wagner y Whitin (1958), se desarrolla el marco teórico del modelo, se demuestran los teoremas fundamentales que sustentan el algoritmo, se describe el procedimiento computacional y se ilustra con ejemplos numéricos. El análisis revela la conexión entre la programación dinámica y la gestión de inventarios, destacando el concepto de horizonte de planificación como herramienta para reducir la complejidad computacional. Se incluyen definiciones formales de los conceptos clave y se discuten extensiones modernas del modelo.
 \end{abstract}
+
 \section{Introducción}
-El problema de dimensionamiento de lotes (\textit{lot sizing}) constituye uno de los problemas fundamentales en la gestión de inventarios. Mientras que el modelo económico clásico (\textit{Economic Order Quantity - EOQ}) supone una demanda constante a través del tiempo, en entornos reales la demanda frecuentemente exhibe variaciones significativas entre periodos. 
+El problema de dimensionamiento de lotes (\textit{lot sizing}) constituye uno de los problemas fundamentales en la gestión de inventarios. Mientras que el modelo económico clásico (\textit{Economic Order Quantity - EOQ}) supone una demanda constante a través del tiempo, en entornos reales la demanda frecuentemente exhibe variaciones significativas entre periodos.
 
-El algoritmo Wagner-Whitin, introducido en 1958 por Harvey M. Wagner y Thomson M. Whitin, representa la primera solución óptima para el problema de dimensionamiento de lotes con demanda dinámica y determinística. Este algoritmo emplea programación dinámica para determinar cuándo y cuánto ordenar, minimizando los costes totales de setup y mantenimiento de inventario a lo largo de un horizonte finito de planificación.
+El algoritmo Wagner-Whitin, introducido en 1958 por Harvey M. Wagner y Thomson M. Whitin, representa la primera solución óptima para el problema de dimensionamiento de lotes con demanda dinámica y determinística. Este algoritmo emplea programación dinámica para determinar cuándo y cuánto ordenar, minimizando los costos totales de \textit{setup} y mantenimiento de inventario a lo largo de un horizonte finito de planificación.
 
-La relevancia del algoritmo persiste hasta la actualidad, sirviendo como base para numerosas extensiones que incorporan restricciones de capacidad, múltiples productos, y condiciones de incertidumbre. Este trabajo busca presentar una exposición integral del algoritmo, desde sus fundamentos teóricos hasta su implementación práctica.
+La relevancia del algoritmo persiste hasta la actualidad, sirviendo como base para numerosas extensiones que incorporan restricciones de capacidad, múltiples productos y condiciones de incertidumbre. Este trabajo busca presentar una exposición integral del algoritmo, desde sus fundamentos teóricos hasta su implementación práctica.
 
 \section{Marco Teórico}
 
@@ -45,18 +45,16 @@ Un sistema de inventarios consiste en los procesos de adquisición, almacenamien
 \end{definition}
 
 \begin{definition}[Costos Relevantes]
-En un sistema de inventarios, se consideran typically los siguientes costos:
+En un sistema de inventarios, se consideran típicamente los siguientes costos:
 \begin{itemize}
     \item \textbf{Costo de ordenar/setup} ($s_t$): Costo fijo incurrido al realizar un pedido o iniciar una producción
-    \item \textbf{Costo de mantener inventario} ($i_t$): Costo por unidad almacenada por periodo
-    \item \textbf{Costo de shortage} ($p_t$): Costo por unidad de demanda insatisfecha (no considerado en el modelo Wagner-Whitin clásico)
+    \item \textbf{Costo de mantener inventario} ($h_t$): Costo por unidad almacenada por periodo
+    \item \textbf{Costo de \textit{shortage}} ($p_t$): Costo por unidad de demanda insatisfecha (no considerado en el modelo Wagner-Whitin clásico)
 \end{itemize}
 \end{definition}
 
 \begin{definition}[Modelo EOQ Clásico]
-El modelo de Cantidad Económica de Pedido supone demanda constante $D$, costo de ordenar $S$, costo de mantener $H$ por unidad por tiempo. 
-\newline
-El problema que resuelve el modelo EOQ consiste en encontrar la cantidad de pedido \( Q \) que minimice la función de costo total por unidad de tiempo:
+El modelo de Cantidad Económica de Pedido supone demanda constante $D$, costo de ordenar $S$, costo de mantener $H$ por unidad por tiempo. El problema que resuelve el modelo EOQ consiste en encontrar la cantidad de pedido $Q$ que minimice la función de costo total por unidad de tiempo:
 
 \[
 TC(Q) = \frac{DS}{Q} + \frac{HQ}{2}
@@ -80,6 +78,7 @@ TC^* = \sqrt{2DSH}
 
 Sin embargo, el modelo EOQ resulta inadecuado cuando la demanda varía significativamente entre periodos, lo que motiva el desarrollo de modelos dinámicos como el de Wagner-Whitin.
 \end{definition}
+
 \subsection{Programación Dinámica}
 
 El algoritmo Wagner-Whitin se fundamenta en la programación dinámica, técnica desarrollada por Richard Bellman.
@@ -88,29 +87,25 @@ El algoritmo Wagner-Whitin se fundamenta en la programación dinámica, técnica
 ``Una política óptima tiene la propiedad de que, cualesquiera que sean el estado inicial y la decisión inicial, las decisiones restantes deben constituir una política óptima con respecto al estado resultante de la primera decisión.''
 \end{definition}
 
-\begin{definition}
-(Problema de Optimización en Etapas). Un problema de optimización en etapas (o de programación dinámica) consiste en encontrar una secuencia de decisiones óptimas a lo largo de un horizonte finito de \( T \) etapas. Formalmente, se define mediante los siguientes elementos:
-\newline
-\textbf{Horizonte temporal}: \( t = 1, 2, \dots, T \) Momentos discretos en los que se toman decisiones. Cada etapa t corresponde a un subproblema.
-\newline
-\textbf{Estado del sistema $s_t$ $\in$ $S_t$}: Describe la situación del sistema al inicio de la etapa 
-t. El estado $s_t$ resume toda la información relevante para tomar decisiones futuras. $S_t$ es el espacio de estados en la etapa 
-t.
-\newline
-\textbf{Decisión o control}: \( x_t \in X_t(s_t) \), donde \( X_t(s_t) \) es el conjunto de decisiones factibles en el estado \( s_t \)
-\newline
-\textbf{Función de transición}: \( s_{t+1} = g_t(s_t, x_t) \), determina como evoluciona el sistema al tomar decisión $x_t$ en el estado $s_t$.
-\newline
-\textbf{Costo inmediato}: \( c_t(x_t, u_t) \), costo incurrido en la etapa \( t \)
-\newline
-\textbf{Costo terminal}: \( V_{T+1}(x_{T+1}) \), costo asociado al estado final (usualmente 0)
+\begin{definition}[Problema de Optimización en Etapas]
+Un problema de optimización en etapas (o de programación dinámica) consiste en encontrar una secuencia de decisiones óptimas a lo largo de un horizonte finito de $T$ etapas. Formalmente, se define mediante los siguientes elementos:
 
-El objetivo es encontrar una política \( \pi = (u_1, u_2, \dots, u_T) \) que minimice el costo total esperado:
+\begin{itemize}
+    \item \textbf{Horizonte temporal}: $t = 1, 2, \dots, T$ momentos discretos en los que se toman decisiones. Cada etapa $t$ corresponde a un subproblema.
+    \item \textbf{Estado del sistema} $s_t \in S_t$: Describe la situación del sistema al inicio de la etapa $t$. El estado $s_t$ resume toda la información relevante para tomar decisiones futuras. $S_t$ es el espacio de estados en la etapa $t$.
+    \item \textbf{Decisión o control}: $x_t \in X_t(s_t)$, donde $X_t(s_t)$ es el conjunto de decisiones factibles en el estado $s_t$
+    \item \textbf{Función de transición}: $s_{t+1} = g_t(s_t, x_t)$, determina cómo evoluciona el sistema al tomar la decisión $x_t$ en el estado $s_t$
+    \item \textbf{Costo inmediato}: $c_t(s_t, x_t)$, costo incurrido en la etapa $t$
+    \item \textbf{Costo terminal}: $V_{T+1}(s_{T+1})$, costo asociado al estado final (usualmente 0)
+\end{itemize}
+
+El objetivo es encontrar una política $\pi = (x_1, x_2, \dots, x_T)$ que minimice el costo total esperado:
 
 \[
-J_\pi(x_1) = \sum_{t=1}^{T} c_t(x_t, u_t) + V_{T+1}(x_{T+1})
+J_\pi(s_1) = \sum_{t=1}^{T} c_t(s_t, x_t) + V_{T+1}(s_{T+1})
 \]
 \end{definition}
+
 \begin{definition}[Ecuación de Bellman para Gestión de Inventarios]
 En el contexto del problema de dimensionamiento de lotes, la ecuación de Bellman describe la política óptima de decisión periodo a periodo. Para cada instante $t = 1, 2, \ldots, N$:
 
@@ -121,11 +116,12 @@ h_{t-1} \cdot I + \delta(x_t) \cdot s_t + f_{t+1}(I + x_t - d_t) & \text{si } I 
 \infty & \text{en otro caso}
 \end{array}
 \right.
+\tag{3}
 \end{equation}
 
 donde:
 \begin{itemize}
-    \item $f_t(I)$: \textbf{Función de Bellman} en el periodo $t$ con inventario inicial $I$, que representa el \textit{costo mínimo acumulado desde $t$ hasta el horizonte $N$}
+    \item $f_t(I)$: \textbf{Función de Bellman} en el periodo $t$ con inventario inicial $I$, que representa el costo mínimo acumulado desde $t$ hasta el horizonte $N$
     \item $t$: \textbf{Índice temporal} que varía en $1 \leq t \leq N$ (periodos discretos)
     \item $I$: \textbf{Nivel de inventario} al inicio del periodo $t$
     \item $x_t$: \textbf{Cantidad a ordenar} en el periodo $t$ (variable de decisión)
@@ -142,8 +138,10 @@ f_{N+1}(I) = \begin{cases}
 \infty & \text{si } I > 0
 \end{cases}
 \quad \text{para todo } I \geq 0
+\tag{4}
 \end{equation}
 \end{definition}
+
 \subsection{Optimización Convexa y Estructuras Especiales}
 
 Aunque el problema de Wagner-Whitin incluye costos fijos (no convexos), la estructura especial del problema permite encontrar soluciones óptimas globales.
@@ -152,6 +150,7 @@ Aunque el problema de Wagner-Whitin incluye costos fijos (no convexos), la estru
 Una función $f: \mathbb{R}^n \rightarrow \mathbb{R}$ es convexa si para todo $x, y \in \mathbb{R}^n$ y $\lambda \in [0,1]$:
 \begin{equation}
 f(\lambda x + (1-\lambda)y) \leq \lambda f(x) + (1-\lambda)f(y)
+\tag{5}
 \end{equation}
 \end{definition}
 
@@ -162,31 +161,31 @@ Una función $f: \mathbb{R}^n \rightarrow \mathbb{R}$ es cóncava si $-f$ es con
 La formulación de Wagner-Whitin, aunque no estrictamente convexa debido a la presencia de costos fijos discontinuos, exhibe propiedades estructurales que garantizan la optimalidad global de la solución encontrada mediante programación dinámica. Estas propiedades fundamentales son:
 
 \begin{enumerate}
-    \item \textbf{Propiedad de Planificación de Cero Inventarios (Zero-Inventory Ordering):} 
-    En una política óptima, la ordenación ocurre únicamente cuando el nivel de inventario es cero. Formalmente, existe una solución óptima que satisface:
+    \item \textbf{Propiedad de Planificación de Cero Inventarios (Zero-Inventory Ordering)}: En una política óptima, la ordenación ocurre únicamente cuando el nivel de inventario es cero. Formalmente, existe una solución óptima que satisface:
     \begin{equation}
         I_{t-1} \cdot x_t = 0 \quad \text{para todo } t = 1, \ldots, N
+        \tag{6}
     \end{equation}
     donde $I_{t-1}$ es el inventario inicial del periodo $t$ y $x_t$ es la cantidad ordenada.
     
-    \item \textbf{Estructura de Subproblemas Independientes:}
-    El problema de $N$ periodos se descompone en subproblemas más simples mediante el principio de optimalidad de Bellman. La función de valor $f_t(I)$ satisface:
+    \item \textbf{Estructura de Subproblemas Independientes}: El problema de $N$ periodos se descompone en subproblemas más simples mediante el principio de optimalidad de Bellman. La función de valor $f_t(I)$ satisface:
     \begin{equation}
         f_t(I) = \min_{x_t \geq 0} \left\{ C_t(I, x_t) + f_{t+1}(I + x_t - d_t) \right\}
+        \tag{7}
     \end{equation}
     donde $C_t(I, x_t)$ representa el costo inmediato en el periodo $t$.
     
-    \item \textbf{Propiedad de Monotonicidad de la Función de Valor:}
-    La función de valor óptimo $f_t(I)$ es no decreciente en el inventario $I$ y no creciente en el tiempo $t$, lo que permite podar soluciones subóptimas durante la búsqueda.
+    \item \textbf{Propiedad de Monotonicidad de la Función de Valor}: La función de valor óptimo $f_t(I)$ es no decreciente en el inventario $I$ y no creciente en el tiempo $t$, lo que permite podar soluciones subóptimas durante la búsqueda.
     
-    \item \textbf{Existencia de Puntos de Regeneración (Regeneration Points):}
-    Los periodos en los que el inventario se agota (puntos de regeneración) dividen el problema en subintervalos independientes, reduciendo la complejidad computacional de $O(2^N)$ a $O(N^2)$.
+    \item \textbf{Existencia de Puntos de Regeneración (Regeneration Points)}: Los periodos en los que el inventario se agota (puntos de regeneración) dividen el problema en subintervalos independientes, reduciendo la complejidad computacional de $O(2^N)$ a $O(N^2)$.
 \end{enumerate}
 
 Estas propiedades garantizan que el algoritmo de Wagner-Whitin, basado en programación dinámica, encuentre la solución óptima global a pesar de la no convexidad introducida por los costos fijos. La optimalidad se demuestra mediante inducción hacia atrás sobre el horizonte de planificación, donde en cada etapa $t$ se garantiza que $f_t(I)$ representa el costo mínimo acumulado desde $t$ hasta el final.
+
 \subsection{Planificación Horizontal}
 
 Un concepto fundamental introducido por Wagner y Whitin es el de \textit{horizonte de planificación}, que permite dividir el problema en subproblemas independientes.
+
 \begin{definition}[Horizonte de Planificación]
 Un periodo $t$ constituye un horizonte de planificación si la solución óptima para los primeros $t$ periodos es independiente de los datos de demanda y costos más allá del periodo $t$.
 
@@ -214,77 +213,304 @@ s &= [100, 100, 100, 100, 100] \quad \text{(costos fijos)} \\
 h &= [1, 1, 1, 1, 1] \quad \text{(costos de mantenimiento)}
 \end{align*}
 
-El algoritmo puede determinar que el periodo 2 es un horizonte de planificación, meaning que las decisiones óptimas para los periodos 1-2 no dependen de los periodos 3-5. Esto reduce el espacio de búsqueda y simplifica el cómputo.
+El algoritmo puede determinar que el periodo 2 es un horizonte de planificación, lo que significa que las decisiones óptimas para los periodos 1-2 no dependen de los periodos 3-5. Esto reduce el espacio de búsqueda y simplifica el cómputo.
 \end{example}
+
 \section{Modelo Matemático y Preliminares}
 
 \subsection{Definición Formal del Problema}
 Considérese un horizonte de planificación discreto de $N$ periodos. En cada periodo $t = 1, 2, \ldots, N$, se definen los siguientes elementos:
 
-\noindent \textbf{Parámetros del problema (datos conocidos):}
+\textbf{Parámetros del problema (datos conocidos):}
 \begin{itemize}
     \item $d_t$: demanda en el periodo $t$ (unidades)
-    \item $s_t$: costo fijo de setup (ordenar o producir) en el periodo $t$ (\$)
+    \item $s_t$: costo fijo de \textit{setup} (ordenar o producir) en el periodo $t$ (\$)
     \item $h_t$: costo unitario de mantener inventario del periodo $t$ al $t+1$ (\$/unidad/periodo)
 \end{itemize}
 
-\noindent \textbf{Variables de decisión:}
+\textbf{Variables de decisión:}
 \begin{itemize}
     \item $x_t$: cantidad a ordenar (o producir) en el periodo $t$ (unidades)
     \item $I_t$: nivel de inventario al final del periodo $t$ (unidades)
 \end{itemize}
 
-\noindent \textbf{Función auxiliar:}
+\textbf{Función auxiliar:}
 \begin{itemize}
     \item $\delta(x_t)$: función indicadora que toma valor 1 si $x_t > 0$ y 0 en caso contrario
 \end{itemize}
 
 \begin{definition}[Problema de Dimensionamiento de Lotes con Demanda Dinámica]
-El objetivo es encontrar un programa de pedidos $\{x_t\}_{t=1}^N$ que minimice el costo total, sujeto a satisfacer toda la demanda, donde la función objetivo se expresa como:
+El problema consiste en encontrar una política de pedidos $\{x_t\}_{t=1}^N$ que minimice:
 \begin{equation}
 \min \sum_{t=1}^N \left[ \delta(x_t) s_t + h_t I_t \right]
+\tag{8}
 \end{equation}
-sujeto a:
+sujeto a las restricciones de balance de inventario y no negatividad:
 \begin{align}
-I_t &= I_{t-1} + x_t - d_t \quad \forall t = 1, \ldots, N \\
-I_t &\geq 0 \quad \forall t \\
-x_t &\geq 0 \quad \forall t \\
-I_0 &= 0 \quad \text{(inventario inicial cero)}
+I_t &= I_{t-1} + x_t - d_t, & \forall t = 1, \ldots, N \label{eq:balance} \\
+I_t &\geq 0, & \forall t = 1, \ldots, N \label{eq:no_negatividad_I} \\
+x_t &\geq 0, & \forall t = 1, \ldots, N \label{eq:no_negatividad_x} \\
+I_0 &= 0 & \text{(inventario inicial cero)} \label{eq:inicial}
 \end{align}
-donde $\delta(x_t)$ es una función indicadora que toma el valor 1 si $x_t > 0$ y 0 en caso contrario.
+donde $\delta(x_t)$ es la función indicadora que toma valor 1 si $x_t > 0$ y 0 en caso contrario.
 \end{definition}
+
+
+\begin{proposition}[Análisis de Factibilidad y Existencia]
+El problema de dimensionamiento de lotes con demanda dinámica satisface:
+
+\textbf{(a) Factibilidad:} El problema siempre es factible. Dada cualquier secuencia de demandas no negativas $\{d_t\}_{t=1}^N$, existe al menos una política factible. En particular, la política de \textit{lote por lote} (ordenar exactamente $x_t = d_t$ en cada periodo $t$) es siempre factible.
+
+\textbf{(b) Existencia de solución óptima:} Siempre existe una solución óptima finita. Esto se garantiza porque:
+\begin{itemize}
+    \item El conjunto factible es no vacío y cerrado
+    \item Los costos $s_t > 0$ y $h_t \geq 0$ son acotados
+    \item La función objetivo está acotada inferiormente por 0
+    \item Existe un número finito de políticas óptimas candidatas debido al \textbf{Teorema de Wagner-Whitin} (ordenar solo cuando el inventario es cero)
+\end{itemize}
+
+\begin{proof}[Esbozo de demostración de existencia]
+Sea $\mathcal{F}$ el conjunto de políticas factibles. Como la política lote-por-lote pertenece a $\mathcal{F}$, tenemos $\mathcal{F} \neq \emptyset$. Además, $\mathcal{F}$ es cerrado pues está definido por igualdades y desigualdades lineales. La función objetivo $f(x,I) = \sum_{t=1}^N [\delta(x_t)s_t + h_t I_t]$ es no negativa y propia. Por el teorema de Weierstrass, al estar minimizando una función semicontinua inferiormente sobre un conjunto cerrado no vacío, existe al menos un minimizador global.
+\end{proof}
+
+\textbf{(c) Caracterización de optimalidad:} Por el Teorema Fundamental de Wagner-Whitin, existe una solución óptima que satisface:
+\begin{equation}
+I_{t-1} \cdot x_t = 0 \quad \forall t = 1, \ldots, N
+\end{equation}
+es decir, nunca se ordena cuando hay inventario positivo (\textit{zero-inventory ordering property}).
+\end{proposition}
+
+\begin{remark}
+La formulación con función indicadora $\delta(x_t)$ hace que el problema sea de \textbf{optimización no lineal con costos fijos}. Sin embargo, la estructura especial del problema garantiza que podemos encontrar la solución óptima global en tiempo polinomial mediante programación dinámica.
+\end{remark}
+
+\begin{remark}
+El supuesto de inventario inicial cero ($I_0 = 0$) no es restrictivo. Si $I_0 > 0$, el problema puede transformarse equivalentemente considerando la demanda neta $d_1' = \max(0, d_1 - I_0)$ y procediendo con el algoritmo estándar.
+\end{remark}
 
 \subsection{Formulación como Programación Entera Mixta}
 
-El problema puede formularse como un programa lineal entero mixto introduciendo variables binarias $y_t$ que indican si se realiza un pedido en el periodo $t$:
+El problema de dimensionamiento de lotes puede formularse como un programa lineal entero mixto (MILP) mediante la introducción de variables binarias que linealizan la función indicadora $\delta(x_t)$.
 
+\begin{definition}[Formulación MILP del Problema Wagner-Whitin]
+Definimos las siguientes \textbf{variables de decisión}:
+\begin{itemize}
+    \item $x_t \geq 0$: cantidad a ordenar en el periodo $t$ (variable continua)
+    \item $I_t \geq 0$: nivel de inventario al final del periodo $t$ (variable continua)
+    \item $y_t \in \{0,1\}$: variable binaria que indica si se realiza un pedido en el periodo $t$
+\end{itemize}
+
+El problema de optimización consiste en:
 \begin{align}
-\min & \sum_{t=1}^N \left[ s_t y_t + h_t I_t \right] \\
-\text{s.a.} & \quad I_t = I_{t-1} + x_t - d_t \quad \forall t \\
-& \quad x_t \leq M y_t \quad \forall t \\
-& \quad I_t \geq 0, \quad x_t \geq 0, \quad y_t \in \{0,1\} \quad \forall t
+\min_{x, I, y} \quad & \sum_{t=1}^N \left[ s_t y_t + h_t I_t \right] \tag{9} \\
+\text{sujeto a:} \quad & I_t = I_{t-1} + x_t - d_t, \quad \forall t = 1, \ldots, N \tag{10} \\
+& x_t \leq M_t y_t, \quad \forall t = 1, \ldots, N \tag{11} \\
+& I_t \geq 0, \quad x_t \geq 0, \quad \forall t = 1, \ldots, N \tag{12} \\
+& y_t \in \{0,1\}, \quad \forall t = 1, \ldots, N \tag{13} \\
+& I_0 = 0 \tag{14}
 \end{align}
-donde $M$ es una constante suficientemente grande (e.g., $M = \sum_{i=t}^N d_i$).
+donde $M_t = \sum_{i=t}^N d_i$ es una cota superior para $x_t$ en cualquier solución óptima.
+\end{definition}
 
+\begin{proposition}[Equivalencia entre Formulaciones]
+Las formulaciones original (6)-(10) y MILP (9)-(14) son equivalentes, meaning:
+\begin{enumerate}
+    \item Tienen el \textbf{mismo valor óptimo} de la función objetivo
+    \item Existe una \textbf{correspondencia biyectiva} entre soluciones óptimas
+    \item En toda solución óptima del MILP se cumple $y_t = \delta(x_t) = \mathbb{1}_{\{x_t > 0\}}$
+\end{enumerate}
+\end{proposition}
+
+\begin{proof}[Demostración de Equivalencia]
+La equivalencia se establece mediante dos transformaciones:
+
+\textbf{Transformación del problema original al MILP:}
+Dada una solución factible $(x_t, I_t)$ del problema original, definimos:
+\[
+y_t = \delta(x_t) = \begin{cases} 
+1 & \text{si } x_t > 0 \\
+0 & \text{si } x_t = 0 
+\end{cases}
+\]
+Esta tripleta $(x_t, I_t, y_t)$ es factible para el MILP porque:
+\begin{itemize}
+    \item Las restricciones (10), (12) y (14) se mantienen directamente
+    \item La restricción (11) se satisface: si $x_t > 0$ entonces $y_t = 1$ y $x_t \leq M_t$; si $x_t = 0$ entonces $y_t = 0$ y $x_t = 0 \leq 0$
+    \item El valor objetivo coincide: $\delta(x_t)s_t = y_t s_t$
+\end{itemize}
+
+\textbf{Transformación del MILP al problema original:}
+Dada una solución factible $(x_t, I_t, y_t)$ del MILP, la pareja $(x_t, I_t)$ es factible para el problema original porque:
+\begin{itemize}
+    \item Las restricciones (7)-(10) se satisfacen directamente
+    \item La función objetivo del problema original evaluada en $(x_t, I_t)$ es:
+    \[
+    \sum_{t=1}^N [\delta(x_t)s_t + h_t I_t] \leq \sum_{t=1}^N [y_t s_t + h_t I_t]
+    \]
+    pues $\delta(x_t) \leq y_t$ (si $y_t = 0$ entonces $x_t = 0$ por (11), luego $\delta(x_t) = 0$; si $y_t = 1$ entonces $\delta(x_t) \leq 1 = y_t$)
+\end{itemize}
+
+\textbf{Optimalidad y correspondencia:}
+En una solución óptima del MILP, necesariamente se cumple $\delta(x_t) = y_t$ para todo $t$, pues de lo contrario existiría algún $t$ con $y_t = 1$ pero $x_t = 0$, y podríamos hacer $y_t = 0$ reduciendo el costo sin violar factibilidad. Por lo tanto, en el óptimo las funciones objetivo coinciden exactamente y las soluciones son equivalentes.
+\end{proof}
+
+\begin{remark}[Mecanismo de la Formulación MILP]
+La clave de la equivalencia reside en la restricción (11) $x_t \leq M_t y_t$ que:
+\begin{itemize}
+    \item \textbf{Forza la relación lógica}: Si $x_t > 0$ entonces $y_t = 1$ (pues si $y_t = 0$, la restricción impondría $x_t = 0$)
+    \item \textbf{Permite la minimización}: El algoritmo de optimización puede "elegir" $y_t = 0$ cuando $x_t = 0$ para ahorrar el costo $s_t$
+    \item \textbf{Mantiene factibilidad}: No excluye ninguna solución óptima del problema original
+\end{itemize}
+\end{remark}
+
+\begin{remark}[Optimalidad de la Cota $M_t$]
+La elección $M_t = \sum_{i=t}^N d_i$ es \textbf{óptima} porque:
+\begin{itemize}
+    \item Es \textbf{suficiente}: En cualquier solución óptima, $x_t \leq \sum_{i=t}^N d_i$ debido a que ordenar más que la demanda total restante sería subóptimo
+    \item Es \textbf{ajustada}: Existen soluciones óptimas donde $x_t = \sum_{i=t}^N d_i$ (política de ordenar todo al inicio)
+    \item Evita \textbf{relajaciones débiles}: Una $M_t$ más grande debilitaría la relajación lineal del problema
+\end{itemize}
+\end{remark}
+
+\begin{example}[Ilustración de la Transformación]
+Considere una solución óptima del problema original para $N=3$ con:
+\[
+x_1 = 50, x_2 = 0, x_3 = 40; \quad I_1 = 30, I_2 = 0, I_3 = 0
+\]
+con demandas $d = [20, 30, 40]$.
+
+La solución equivalente en el MILP es:
+\[
+x_1 = 50, x_2 = 0, x_3 = 40; \quad I_1 = 30, I_2 = 0, I_3 = 0; \quad y_1 = 1, y_2 = 0, y_3 = 1
+\]
+
+Ambas tienen el mismo costo: $s_1 + s_3 + h_1 \cdot 30$.
+\end{example}
+
+\begin{remark}[Complejidad Computacional]
+Aunque equivalentes matemáticamente, las formulaciones difieren computacionalmente:
+\begin{itemize}
+    \item \textbf{Formulación original}: Problema no lineal (NP-duro en general)
+    \item \textbf{Formulación MILP}: Problema lineal entero mixto, pero con $N$ variables binarias
+    \item \textbf{Algoritmo Wagner-Whitin}: Explota la estructura específica para resolver en $O(N^2)$
+\end{itemize}
+Para problemas grandes, el algoritmo específico sigue siendo más eficiente que resolver el MILP con métodos generales.
+\end{remark}
 \subsection{Formulación como Programación Dinámica}
 
-El problema puede formularse recur\-sivamente mediante progra\-mación dinámica. 
-Sea $f_t(I)$ el costo mínimo acumulado desde el periodo $t$ hasta el final, dado un inventario inicial $I$ al comienzo del periodo $t$:
+El problema de dimensionamiento de lotes admite una formulación natural mediante programación dinámica, que explota la estructura secuencial de las decisiones a lo largo del horizonte de planificación.
 
+\begin{definition}[Formulación de Programación Dinámica]
+Sea $f_t(I)$ la \textbf{función de valor óptimo} (función de Bellman) que representa el costo mínimo acumulado desde el periodo $t$ hasta el periodo $N$, dado un nivel de inventario inicial $I$ al comienzo del periodo $t$.
+
+La ecuación de Bellman para este problema es:
 \begin{equation}
-f_t(I) = \min_{\substack{x_t \geq 0 \\ I + x_t \geq d_t}} \left[ h_{t-1} I + \delta(x_t) s_t + f_{t+1}(I + x_t - d_t) \right]
+f_t(I) = \min_{\substack{x_t \geq 0 \\ I + x_t \geq d_t}} \left[ C_t(I, x_t) + f_{t+1}(I + x_t - d_t) \right]
+\tag{15}
+\end{equation}
+donde el \textbf{costo inmediato} $C_t(I, x_t)$ está dado por:
+\begin{equation}
+C_t(I, x_t) = h_{t-1} I + \delta(x_t) s_t
+\tag{16}
 \end{equation}
 
-con condición terminal:
-
+La condición terminal que cierra la recursión es:
 \begin{equation}
 f_{N+1}(I) = \begin{cases} 
 0 & \text{si } I = 0 \\
-\infty & \text{en otro caso}
+\infty & \text{si } I > 0
 \end{cases}
+\quad \text{para todo } I \geq 0
+\tag{17}
 \end{equation}
+\end{definition}
 
-Aunque esta formulación es correcta, su implementación directa resulta computacional\-mente costosa. Los teoremas fundamentales presentados a continuación permiten simplificar notable\-mente el problema.
+\begin{remark}[Interpretación de la Función de Bellman]
+La función $f_t(I)$ encapsula el \textbf{principio de optimalidad} de Bellman aplicado a la gestión de inventarios:
+\begin{itemize}
+    \item \textbf{Estado del sistema}: El inventario inicial $I$ al comienzo del periodo $t$
+    \item \textbf{Variable de control}: La cantidad a ordenar $x_t$
+    \item \textbf{Transición de estado}: $I_{t+1} = I + x_t - d_t$
+    \item \textbf{Costo inmediato}: $C_t(I, x_t)$ que incluye costos de mantenimiento y setup
+    \item \textbf{Función de valor futuro}: $f_{t+1}(I + x_t - d_t)$ representa las consecuencias óptimas de la decisión actual
+\end{itemize}
+La ecuación (15) expresa que la política óptima en el estado $(t, I)$ consiste en elegir $x_t$ que minimice la suma del costo inmediato más el costo futuro óptimo.
+\end{remark}
+
+\begin{proposition}[Consistencia con el Principio de Optimalidad]
+La formulación (15)-(17) satisface el principio de optimalidad de Bellman. Es decir, cualquier subpolítica de una política óptima es a su vez óptima para el subproblema correspondiente.
+\end{proposition}
+
+\begin{proof}
+Sea $\pi^* = (x_1^*, x_2^*, \ldots, x_N^*)$ una política óptima para el problema completo, y sea $I_t^*$ la trayectoria de inventario resultante. Considere el subproblema desde el periodo $t$ hasta $N$ con inventario inicial $I_t^*$. 
+
+Si existiera una política $\pi' = (x_t', \ldots, x_N')$ con costo menor que $(x_t^*, \ldots, x_N^*)$ para este subproblema, entonces la política $(x_1^*, \ldots, x_{t-1}^*, x_t', \ldots, x_N')$ tendría menor costo total que $\pi^*$, contradiciendo la optimalidad de $\pi^*$.
+\end{proof}
+
+\begin{remark}[Complejidad Computacional de la Implementación Directa]
+Aunque la formulación (15)-(17) es conceptualmente correcta, su implementación computacional directa presenta serias dificultades:
+
+\begin{itemize}
+    \item \textbf{Espacio de estados continuo}: La variable de estado $I$ toma valores en $\mathbb{R}_{\geq 0}$, requiriendo discretización
+    \item \textbf{Dimensionalidad}: Para cada periodo $t$, debemos computar $f_t(I)$ para múltiples valores de $I$
+    \item \textbf{Complejidad exponencial}: Sin estructura adicional, el número de estados a considerar crece exponencialmente con $N$
+    \item \textbf{Problemas de discretización}: La elección del paso de discretización afecta precisión y costo computacional
+\end{itemize}
+
+En el peor caso, si discretizamos el inventario en $K$ niveles, la complejidad sería $O(K^2 N)$, que puede ser prohibitiva para $K$ grande.
+\end{remark}
+
+\begin{example}[Ilustración de la Complejidad]
+Para un problema con $N=12$ periodos y discretizando el inventario en $K=100$ niveles:
+\begin{itemize}
+    \item Número de estados: $12 \times 100 = 1,200$
+    \item Evaluaciones de la ecuación de Bellman: $\approx 100^2 \times 12 = 120,000$
+    \item Cálculo de mínimos sobre espacios continuos aproximados
+\end{itemize}
+Esto contrasta con la complejidad $O(N^2)$ del algoritmo Wagner-Whitin que explota las propiedades estructurales.
+\end{example}
+
+\begin{theorem}[Reducción del Espacio de Estados]
+Gracias a la \textbf{propiedad de cero inventarios} (Teorema 1), podemos restringir la atención a estados donde $I = 0$ al comienzo de cada periodo. Esto reduce el espacio de estados de dimensión continua a uno discreto finito.
+\end{theorem}
+
+\begin{proof}
+Por el Teorema 1, existe una solución óptima que satisface $I_{t-1} \cdot x_t = 0$ para todo $t$. Por lo tanto, en cada periodo $t$, o bien $I_{t-1} = 0$ (inventario cero) o bien $x_t = 0$ (no se ordena). 
+
+En particular, al comienzo de cualquier periodo donde se realice un pedido, debemos tener $I = 0$. Como las decisiones de ordenar ocurren solo en puntos de regeneración, basta con considerar $f_t(0)$ para todo $t$.
+\end{proof}
+
+\begin{remark}[Simplificación Fundamental]
+Los teoremas fundamentales de Wagner-Whitin permiten las siguientes simplificaciones cruciales:
+\begin{enumerate}
+    \item \textbf{Reducción del espacio de estados}: Solo necesitamos considerar $f_t(0)$
+    \item \textbf{Patrón de pedidos}: Cada pedido cubre demandas consecutivas
+    \item \textbf{Horizontes de planificación}: El problema se descompone en subproblemas independientes
+\end{enumerate}
+Estas propiedades reducen la complejidad de $O(K^2 N)$ a $O(N^2)$, haciendo el problema computacionalmente tratable incluso para $N$ grande.
+\end{remark}
+
+\begin{algorithm}[H]
+\caption{Programación Dinámica Simplificada por Wagner-Whitin}
+\begin{algorithmic}[1]
+\State Inicializar $F(0) = 0$ \Comment{Costo óptimo hasta el periodo 0}
+\For{$t = 1$ to $N$}
+    \State $F(t) = \infty$
+    \For{$j = 0$ to $t-1$}
+        \State Calcular costo de ordenar en $j+1$ para cubrir periodos $j+1$ hasta $t$
+        \State $costo = F(j) + s_{j+1} + \sum_{k=j+1}^{t-1} \sum_{l=k+1}^t h_l d_k$
+        \If{$costo < F(t)$}
+            \State $F(t) = costo$
+            \State $P(t) = j$ \Comment{Registrar punto de regeneración}
+        \EndIf
+    \EndFor
+\EndFor
+\end{algorithmic}
+\end{algorithm}
+
+\begin{remark}[Equivalencia con la Formulación Original]
+La formulación simplificada $F(t) = \min_{0 \leq j < t} [F(j) + s_{j+1} + H(j,t)]$ es equivalente a resolver la ecuación de Bellman (15) bajo las propiedades estructurales de Wagner-Whitin, donde $H(j,t)$ representa el costo de mantener inventario al cubrir demandas de $j+1$ a $t$ con una orden en $j+1$.
+\end{remark}
 \section{Resultados del articulo base}
 
 Los siguientes teoremas, demostrados originalmente por Wagner y Whitin, establecen propiedades estructurales de la solución óptima que reducen drásticamente el espacio de búsqueda.
